feat: Introduce API governance, server monitoring, and a new dashboard with menu restructuring and build system updates.